--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.4"
   },
@@ -42,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "daisyui": "^3.1.6",
     "eslint": "^8.36.0",
     "eslint-plugin-react": "^7.32.2",
     "tailwindcss": "^3.2.7"
